<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="2pt"
    tools:context=".Terminosycondiciones">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15pt"
            android:freezesText="true"
            android:text="@string/bienvenido_name"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.003" />

        <TextView
            android:layout_width="361dp"
            android:layout_height="80dp"
            android:layout_marginLeft="20pt"
            android:layout_marginRight="20pt"
            android:freezesText="true"
            android:text="@string/txt_terminos_condiciones_name"
            android:textSize="8pt"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.411"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.561" />

        <TextView
            android:layout_width="360dp"
            android:layout_height="77dp"
            android:layout_marginLeft="20pt"
            android:layout_marginRight="20pt"
            android:freezesText="true"
            android:text="@string/txt_terminos_condiciones_2_name"
            android:textSize="8pt"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.684" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="241dp"
            android:layout_height="252dp"
            android:layout_marginBottom="8pt"
            android:backgroundTint="@color/btncolor"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.472"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19" />

        <Button
            android:id="@+id/btn_cancelar_terminos"
            android:layout_width="139dp"
            android:layout_height="58dp"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/btncolor"
            android:text="@string/no_acepta_terminos"
            android:textColor="@color/white"
            android:textSize="7pt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btn_acepta_terminos"
            android:layout_width="152dp"
            android:layout_height="59dp"
            android:layout_marginLeft="20pt"
            android:layout_marginTop="636dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/btncolor"
            android:text="@string/acepta_terminos"
            android:textColor="@color/white"
            android:textSize="7pt"
            app:layout_constraintHorizontal_bias="0.989"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>